--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,12 @@
             <version>5.4.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlinx</groupId>
+            <artifactId>kotlinx-coroutines-core</artifactId>
+            <version>1.3.3</version>
+        </dependency>
+
     </dependencies>
 
     <build>
